added management page and choir members page.  pasted in basic form info from bootstrap but have not customized it yet. (on management page).

--- a/styles/main.css
+++ b/styles/main.css
@@ -68,6 +68,12 @@ h4.address{
   border-radius: 10px;
 }
 
+.details{
+  background-color: #e5e7eb;
+  margin-top: 25px;
+  border-radius: 10px;
+}
+
 a:hover{
   cursor: pointer;
 }
