--- a/styles/main.css
+++ b/styles/main.css
@@ -88,3 +88,11 @@ a:hover{
   font-weight: 400;
   font-size: 1.7rem;
 }
+
+#addMember{
+  margin-top: 30px;
+}
+
+.hidden {
+  visibility: hidden;
+}
