--- a/styles/main.css
+++ b/styles/main.css
@@ -80,9 +80,10 @@ a:hover{
 
 #quote,
 #reference{
-  font-family: 'Tangerine', cursive;
-  font-size: 2.7rem;
-  font-weight: 700;
+  /*font-family: 'Tangerine', cursive;*/
+  font-family: 'Italianno', cursive;
+  font-size: 2rem;
+  /*font-weight: 700;*/
 }
 #reference{
   font-weight: 400;
